# callset

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
callset/: cli.py  context.py  models.py  prompts.py
callset/formatter/: __init__.py  chatml_fmt.py  hermes_fmt.py  openai_fmt.py  raw_fmt.py
callset/generator/: conversations.py  providers.py  seeds.py
callset/parser/: json_tools.py  openapi.py
callset/validator/: __init__.py  format.py  schema.py  semantic.py
openAPI-examples/: travel_api.yaml
specs/: toolcall_gen_spec.md
tests/: test_cli.py  test_context.py  test_formatters.py  test_generator.py  test_parser.py  test_validators.py
tests/fixtures/: sample_openapi.yaml  sample_tools.json
