[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "callset"
version = "0.1.0"
description = "Generate validated tool-calling training data from API specifications"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
dev = ["pytest", "pytest-mock"]

[project.scripts]
callset = "callset.cli:main"

[tool.setuptools.packages.find]
include = ["callset*"]
